<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_find_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_author_search"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bt_search_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/et_find_author"
        app:layout_constraintTop_toTopOf="@+id/et_find_author" />

    <WebView
        android:id="@+id/wv_content"
        android:layout_width="363dp"
        android:layout_height="359dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_find_object" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="401dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_find_author">

        <TextView
            android:id="@+id/tv_result_objects"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nothing" />
    </HorizontalScrollView>

    <EditText
        android:id="@+id/et_find_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_object_number"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/et_find_author"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bt_search_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_artobj"
        app:layout_constraintStart_toStartOf="@+id/bt_search_author"
        app:layout_constraintTop_toTopOf="@+id/et_find_object" />

</androidx.constraintlayout.widget.ConstraintLayout>